--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,37 +1,19 @@
-#logging.path=/user/local/log
-#logging.level.com.favorites=DEBUG
-#logging.level.org.springframework.web=INFO
-#logging.level.org.hibernate=ERROR
-#
-#server.port=8081
-#
-#spring.datasource.url=jdbc:mysql://localhost:3306/demo
-#spring.datasource.username=root
-#spring.datasource.password=123456
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#
-#spring.jpa.properties.hibernate.hbm2ddl.auto=update
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-#spring.jpa.show-sql= true
 server:
   port: 8080
+
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/demo?useUnicode=true&characterEncoding=utf-8
     username: root
     password: 123456
     driver-class-name: com.mysql.jdbc.Driver
-
-#  jpa:
-#    properties:
-#      hibernate.hbm2ddl.auto: update
-#      hibernate.dialect: org.hibernate.dialect.MySQL5InnoDBDialect
-#    show-sql: true
+  thymeleaf:
+    cache: false
+    mode: HTML5
+  jpa:
+    show-sql: true
 
 mybatis:
   config-locations: classpath:mybatis/mybatis-config.xml
   mapper-locations: classpath:mybatis/mapper/*.xml
 
-spring.thymeleaf:
-  cache: false
-  mode: HTML5
